--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -41,6 +41,11 @@
         =link_to_function("Find me automatically", "ActivityMap.findMe('#{@activity.id}')")
       =google_map(@activity.time_slots.group_by_organisation.collect(&:organisation), :width => "100%", :height => 300, :version => "3.5", :marker_options => {:click => true}, :auto_bounds => true)
     .sevencol.last
+      .subrow
+        Not found anything near you? – 
+        =link_to_slug("Click here", :organisations)
+        to set up Spots of Time in your area.
+      .subrow
       #organisation_panel
         -if @panel_organisation
           =render("activities/organisation_panel", :activity => @activity, :organisation => @panel_organisation)
