Styles for feature_panel.

--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -19,12 +19,14 @@
 #feature_panel_row.row
   .twelvecol
     .feature_panel_left
-      %h3 How this works
       #feature_panel_info_1.feature_panel_info
-        Got a moment?  We’ve created a range of fun, bite-size activities that you can do in your local community.  It's easy to get involved and there's no long term commitment.
+        %h3 Got a moment?      
+        %p We’ve created a range of fun, bite-size activities that you can do in your local community.  It's easy to get involved and there's no long term commitment.
       #feature_panel_info_2.feature_panel_info
-        Help us grow. Suggest 'Spots of Time' to organisations in your area and make it easy for people to give their time to benefit the community.
+        %h3 Help us grow
+        %p Suggest 'Spots of Time' to organisations in your area and make it easy for people to give their time to benefit the community.
       #feature_panel_info_3.feature_panel_info
+        %h3 Anytime anywhere
         Start changing your corner of the world with our simple anytime anywhere ideas that will bring a smile to you and those around you.
       #feature_panel_nav
     .feature_panel_right
