--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -432,6 +432,9 @@ input:focus, textarea:focus {
 	-0-box-shadow:inset 1px 1px 5px #f5f5f5;
 	box-shadow:inset 1px 1px 5px #f5f5f5;
 }
+.formtastic input.other_input_for_select {
+  margin-bottom: 0;
+}
 #new_enquiry input, #new_enquiry textarea, #new_enquiry input select {
 	width: 100%;	
 }
