--- a/client/app/views/layouts/application.html.haml
+++ b/client/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     %link{ :href => "/images/favicon.ico", :rel => "shortcut icon" }
     %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }
     = google_javascripts :jquery, :jqueryui
-    = javascript_include_tag 'jrails', 'jquery.cycle', 'tramlines', 'client/tramlines', 'jquery.labelify', 'jquery.fancy_box/jquery.fancybox-1.3.1.pack', 'jquery.fancy_box/jquery.mousewheel-3.0.2.pack.js', "jquery.autogrowtextarea.js", "css3-mediaqueries", :cache => true
+    = javascript_include_tag 'jrails', 'jquery.cycle', 'tramlines', 'client/tramlines', 'jquery.labelify', 'jquery.fancy_box/jquery.fancybox-1.3.1.pack', 'jquery.fancy_box/jquery.mousewheel-3.0.2.pack.js', 'client/load_fancybox', "jquery.autogrowtextarea.js", "css3-mediaqueries", :cache => true
     =javascript_include_tag 'jquery.fancy_box/jquery.easing-1.3.pack.js'
     =javascript_include_tag "http://connect.facebook.net/en_US/all.js"
     =# stylesheet_link_tag 'http://fast.fonts.com/cssapi/f1269106-f262-440b-b3ce-93423b2eaf06.css'
