--- a/client/app/views/notifier/time_slot_booking_for_organisation.text.html.haml
+++ b/client/app/views/notifier/time_slot_booking_for_organisation.text.html.haml
@@ -6,7 +6,7 @@
 
 %p
   =link_to("Click here", site_url + organisation_time_slot_bookings_path(@time_slot_booking.organisation))
-  ="to view all your volunteers."
+  ="to view the spot and confirm it."
 
 %p
   Thanks,
