--- a/client/app/views/notifier/time_slot_booking_for_organisation.text.plain.haml
+++ b/client/app/views/notifier/time_slot_booking_for_organisation.text.plain.haml
@@ -2,7 +2,7 @@
 
 ="#{@time_slot_booking.member} has volunteered to #{@time_slot_booking.activity} on #{@time_slot_booking.starts_at_neat_string}."
 
-To view all your volunteers, use the link below:
+To view the spot and confirm it, use the link below:
 
 ="#{site_url + organisation_time_slot_bookings_path(@time_slot_booking.organisation)}"
 
