--- a/client/app/views/members/show.html.haml
+++ b/client/app/views/members/show.html.haml
@@ -1,29 +1,27 @@
-- hide_page_title
+-hidden_title @member.full_name
 -no_content_row
 
 .row
-  .profile_photo.twocol
-    - if @member == @logged_in_member
-      =link_to image_for(@member, '140x'), :controller => 'member', :action => 'setphoto', :id => @logged_in_member
-    - else
-      =image_for(@member, '140x')
-  .profile_info.fivecol
-    %h1
-      = @member.full_name
-    %p  
-      = @member.bio
-    -if false    
-      %br.clear
-      = render_wall(@member.wall)
--if false          
-  #right_column
-    #options.group_section.bx
-      .bx_in
-        %ul.action_links
-        = render_photos_box(@member)
-%br.clear
-- options_panel do
-  = link_if_allowed "Edit account", edit_member_proc(@member)
-  = link_if_allowed "Photos", attachable_photo_albums_proc(@member)
-  = link_if_allowed "Videos", member_videos_proc(@member)
-  = link_if_allowed "Links", member_links_proc(@member)
+  .profile_photo.threecol
+    -if logged_in_as?(@member)
+      =link_to image_for(@member, '300x'), :controller => 'member', :action => 'setphoto', :id => @logged_in_member
+    -else
+      =image_for(@member, '300x')
+  .profile_info.ninecol.last
+    %h1=@member.full_name
+    -if !@member.bio.blank?
+      %p=@member.bio
+    -if logged_in_as?(@member)
+      %p=link_to_box("Edit your bio", edit_bio_member_path(@member))
+    -if !@member.time_slot_bookings.starts_at_gt(Time.now).empty?
+      #member_upcoming_spots
+        %h3="#{forename_or_your(@member, :capitalize => true)} upcoming spots"
+        -@member.time_slot_bookings.starts_at_gt(Time.now).ascend_by_starts_at.each do |booking|
+          =render("members/time_slot_booking", :time_slot_booking => booking)
+            
+            
+.row
+  .twelvecol
+    -options_panel do
+      =back_link
+
