--- a/client/app/views/time_slot_bookings/thank_you.html.haml
+++ b/client/app/views/time_slot_bookings/thank_you.html.haml
@@ -26,8 +26,10 @@
       %p.time_slot_note=@time_slot_booking.time_slot.note
     %p
       =link_to_function("Share this on Facebook", "FBSharer.share()", :class => "facebook_share_link")
-      or
+      |
       =link_to("Find some more activities", home_path)
+      |
+      =link_to("Edit your profile", logged_in_member)
 .row
   .twelvecol
     =options_panel
