--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -6413,7 +6413,9 @@ table.time_slots td.link {width:20%;}
 }
 
 /*========== Organisations section ==========*/
-
+.confirm_message, .confirm_message a {
+  color: red;
+}
 #organisation_signup_button {
   margin-top: 40px;
 }
