--- a/client/app/views/layouts/application.html.haml
+++ b/client/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
     %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "Content-Type" }
     %meta{ :name => "info", :content => "#{page_title}#{page_subtitle}" }
     %link{ :href => "/images/favicon.ico", :rel => "shortcut icon" }
+    %link{ :href => "http://fonts.googleapis.com/css?family=Merriweather:300,400,700,900", :rel => "stylesheet", :type=>"text/css"}
     %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }
     = google_javascripts :jquery, :jqueryui
     = javascript_include_tag 'jrails', 'jquery.cycle', 'tramlines', 'client/tramlines', 'jquery.labelify', 'jquery.fancy_box/jquery.fancybox-1.3.1.pack', 'jquery.fancy_box/jquery.mousewheel-3.0.2.pack.js', 'client/load_fancybox', "jquery.autogrowtextarea.js", "css3-mediaqueries", :cache => true
@@ -60,6 +61,7 @@
         =render :partial => 'layouts/header'
       #subheader.container
         #nav_line.row
+          #line_top
           .ninecol
             =render("layouts/nav")
           #search_box.threecol.last
