--- a/client/app/views/activities/_organisation_panel.html.haml
+++ b/client/app/views/activities/_organisation_panel.html.haml
@@ -1,22 +1,24 @@
--lat ||= nil
--lng ||= nil
-=image_for(organisation, "80x80#", :class => "organisation_panel_image")
-.organisation_details
-  %h2
-    =organisation.name
-    -if !lat.blank? && !lat.blank?
-      %span.miles_away
-        -num_miles = organisation.location.distance_to(Location.new(:lat => lat, :lng => lng)).to_i
-        =num_miles.zero? ? "less than a mile away" : "#{pluralize(num_miles, "mile")} away"
-  .fl
-    =read_more_truncate(organisation.description) 
-%hr
-%h4 When can you help out?          
-=render("time_slots/table", :time_slots => activity.time_slots.organisation_id_is(organisation.id).ascend_by_starts_at)
--if !(other_activities = organisation.activities.id_is_not(@activity.id)).blank?
-  %h4 Other things you can do here
-  .activity_grid.small_activity_grid
-    -other_activities.each do |activity|
-      -link_to(organisation_activity_path(organisation,activity), :class => "activity") do
-        =image_for(activity, "147x147#")
-        .label=activity
+%p.no_results{:style => 'display:none'} Sorry, we couldn't find anywhere for you to do this activity.
+.organisation_panel
+  -lat ||= nil
+  -lng ||= nil
+  =image_for(organisation, "80x80#", :class => "organisation_panel_image")
+  .organisation_details
+    %h2
+      =organisation.name
+      -if !lat.blank? && !lat.blank?
+        %span.miles_away
+          -num_miles = organisation.location.distance_to(Location.new(:lat => lat, :lng => lng)).to_i
+          =num_miles.zero? ? "less than a mile away" : "#{pluralize(num_miles, "mile")} away"
+    .fl
+      =read_more_truncate(organisation.description) 
+  %hr
+  %h4 When can you help out?          
+  =render("time_slots/table", :time_slots => activity.time_slots.organisation_id_is(organisation.id).ascend_by_starts_at)
+  -if !(other_activities = organisation.activities.id_is_not(@activity.id)).blank?
+    %h4 Other things you can do here
+    .activity_grid.small_activity_grid
+      -other_activities.each do |activity|
+        -link_to(organisation_activity_path(organisation,activity), :class => "activity") do
+          =image_for(activity, "147x147#")
+          .label=activity
