Added sharing with a friend

--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -13,6 +13,7 @@
       %br.clear
       %br.clear
     =read_more_truncate(@activity.description, :length => 1200)
+    =render_share_link 'Share with a friend'
     -if @organisation
       .subrow
         %hr
