--- a/client/app/views/organisations/show.html.haml
+++ b/client/app/views/organisations/show.html.haml
@@ -9,6 +9,9 @@
     -if !@organisation.confirmed? && allowed_to?(confirm_organisation_proc(@organisation))
       %p.confirm_message
         =link_to 'This organisation has not been confirmed yet. Click here to confirm them and make their activities visible on the site.', confirm_organisation_path(@organisation)
+    -elsif @organisation.asleep? && allowed_to?(wake_organisation_proc)
+      %p.asleep_message
+        =link_to 'This organisation is asleep. Click here to re-activate them and make their activities visible on the site.', wake_organisation_path(@organisation)
     =simple_format(@organisation.description)
     .subrow
       %hr
@@ -30,5 +33,7 @@
       =link_if_allowed("List activities", organisation_time_slots_proc(:organisation_id => @organisation))
       =link_if_allowed("List volunteers", organisation_time_slot_bookings_proc(:organisation_id => @organisation))
       =link_if_allowed("Edit organisation", edit_organisation_proc(@organisation))
-      =link_if_allowed("Delete organisation", @organisation, :method => :delete)
+      -if @organisation.active?
+        =link_if_allowed("Sleep organisation", sleep_organisation_proc(@organisation), :confirm => "Are you sure you want to 'sleep' this organisation?")
+      =link_if_allowed("Delete organisation", @organisation, :method => :delete, :confirm => 'Are you sure you want to delete this organisation?')
       =link_if_allowed("New organisation", new_organisation_proc)
