--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -26,8 +26,13 @@
         %h3 Help us grow
         %p Suggest 'Spots of Time' to organisations in your area and make it easy for people to give their time to benefit the community.
       #feature_panel_info_3.feature_panel_info
-        %h3 Anytime anywhere
-        Start changing your corner of the world with our simple anytime anywhere ideas that will bring a smile to you and those around you.
+        %h3=link_to_self @blog_post
+        %p=strip_tags @blog_post.text.word_truncate(150)
+      -if false
+        Disabled - replaced with latest blog post
+        #feature_panel_info_3.feature_panel_info
+          %h3 Anytime anywhere
+          Start changing your corner of the world with our simple anytime anywhere ideas that will bring a smile to you and those around you.
       #feature_panel_nav
     .feature_panel_right
       =image_tag("how-it-works-user.jpg", "data-slide-num" => 1)
