--- a/client/app/views/activities/index.html.haml
+++ b/client/app/views/activities/index.html.haml
@@ -4,4 +4,7 @@
     %li
       =link_to_self(activity)
 
-=options_panel([Activity.new])
+-options_panel do
+  =back_link
+  =link_if_allowed 'New activity', new_activity_proc
+  =link_if_allowed 'Set order', order_activities_proc
